--- a/lfe_3945.Rmd
+++ b/lfe_3945.Rmd
@@ -3,6 +3,9 @@ title: "Labour force estimates, 1939 - 1945"
 output: html_notebook
 ---
 
+<!-- This file by Martin Monkman is licensed under a Creative Commons Attribution 4.0 International License. -->
+
+
 ```{r setup}
 
 library(tidyverse)
